// MyHealthBuddy ERD
// DBML format (https://dbml.dbdiagram.io)
// 실제 SQLAlchemy 모델 기준 | 생성일: 2026-05-06

Table users {
  id              int         [pk, increment, note: '사용자 고유 식별자']
  provider        varchar(20) [not null, default: 'google', note: '소셜 로그인 제공자 (현재 google만 지원)']
  provider_id     varchar(128)[not null, unique, note: '소셜 로그인 제공자 고유 ID']
  email           varchar(255)[null, note: '소셜 로그인 시 제공된 이메일']
  nickname        varchar(20) [not null, note: '서비스 전역 닉네임 (1~20자)']
  profile_image   varchar(512)[null, note: '프로필 이미지 URL']
  role            varchar(10) [not null, default: 'USER', note: 'USER / ADMIN']
  gender          varchar(1)  [null, note: 'M: 남성 / F: 여성 (최초 입력 후 변경 불가)']
  birth_year      int         [null, note: '출생 연도 (나이 동적 계산 기준)']
  character_stage int         [not null, default: 0, note: '캐릭터 진화 단계 (0~3)']
  current_point   int         [not null, default: 0, note: '현재 보유 포인트']
  is_deleted      boolean     [not null, default: false, note: '탈퇴 여부 (Soft Delete)']
  deleted_at      datetime    [null, note: '탈퇴 처리 시각']
  withdraw_reason varchar(500)[null, note: '탈퇴 사유']
  created_at      datetime    [not null, default: `now()`, note: '계정 생성 시각']
}

Table health_records {
  id                int         [pk, increment, note: '건강검진 기록 ID']
  user_id           int         [null, ref: > users.id, note: 'FK → users (비로그인 사용자는 NULL)']
  systolic_bp       int         [not null, note: '수축기 혈압 (mmHg)']
  diastolic_bp      int         [not null, note: '이완기 혈압 (mmHg)']
  total_cholesterol int         [not null, note: '총 콜레스테롤 (mg/dL)']
  glucose           int         [not null, note: '혈당 (mg/dL)']
  height            decimal(5,1)[not null, note: '키 (cm)']
  weight            decimal(5,1)[not null, note: '몸무게 (kg)']
  bmi               decimal(4,1)[null, note: 'BMI 자동 계산']
  smoke_yn          boolean     [not null, note: '흡연 여부']
  alcohol_yn        boolean     [not null, note: '음주 여부']
  exercise_yn       boolean     [not null, note: '규칙적 운동 여부']
  created_at        datetime    [not null, default: `now()`, note: '입력 시각']
}

Table prediction_results {
  id               int         [pk, increment, note: '예측 결과 ID']
  record_id        int         [not null, ref: > health_records.id, note: 'FK → health_records']
  trigger_type     varchar     [not null, note: 'new_record / challenge_streak / manual']
  cvd_risk_percent decimal(5,2)[not null, note: '심혈관 발생 확률 (0~100%)']
  cvd_age          int         [not null, note: '심혈관 나이']
  risk_level       varchar     [not null, note: 'low / moderate / medium / high / very_high']
  top_risk_factors json        [null, note: 'SHAP 기반 위험 요인 상위 3개']
  ai_evaluation    text        [null, note: 'ChatGPT 수치 평가 코멘트']
  ai_alert         text        [null, note: 'ChatGPT 위험 경고 (없으면 NULL)']
  ai_missions      json        [null, note: 'ChatGPT 추천 챌린지 3개']
  ai_encouragement text        [null, note: 'ChatGPT 동기부여 문장']
  created_at       datetime    [not null, default: `now()`, note: '생성 시각']
}

Table challenges {
  id                    int         [pk, increment, note: '챌린지 ID']
  category              varchar     [not null, note: 'diet / exercise / lifestyle']
  title                 varchar(100)[not null, note: '챌린지 제목']
  description           text        [null, note: '챌린지 상세 설명']
  expected_effect       text        [null, note: '기대효과']
  verification_method   varchar     [not null, note: 'checklist / input / cv']
  target_risk_factors   varchar(200)[null, note: '대상 위험 요인 (쉼표 구분)']
  duration_days         int         [not null, note: '전체 수행 기간 (일)']
  required_success_days int         [not null, note: '완료 인정 최소 인증 일수']
}

Table user_challenges {
  id             int      [pk, increment, note: '사용자 챌린지 참여 ID']
  user_id        int      [not null, ref: > users.id, note: 'FK → users']
  challenge_id   int      [not null, ref: > challenges.id, note: 'FK → challenges']
  status         varchar  [not null, note: 'active / completed / abandoned / failed']
  current_streak int      [not null, default: 0, note: '연속 달성 일수 (7일 시 재예측)']
  start_date     date     [not null, note: '시작 날짜']
  completed_at   datetime [null, note: '완료 시각']
}

Table challenge_logs {
  id                int         [pk, increment, note: '인증 기록 ID']
  user_challenge_id int         [not null, ref: > user_challenges.id, note: 'FK → user_challenges']
  log_date          date        [not null, note: '인증 날짜']
  verification_type varchar     [not null, note: 'checklist / input / cv']
  input_value       varchar(100)[null, note: '수치 입력값 (개피수, 걸음수 등)']
  cv_result_id      int         [null, ref: > cv_analysis_logs.id, note: 'FK → cv_analysis_logs (cv 인증 시)']
  created_at        datetime    [not null, default: `now()`, note: '기록 생성 시각']
}

Table cv_analysis_logs {
  id            int         [pk, increment, note: 'CV 분석 결과 ID']
  user_id       int         [not null, ref: > users.id, note: 'FK → users']
  image_url     varchar(500)[null, note: '업로드 이미지 경로']
  analysis_type varchar     [not null, note: 'diet / health_checkup / exercise']
  result_json   json        [null, note: 'GPT Vision API 분석 결과']
  created_at    datetime    [not null, default: `now()`, note: '분석 시각']
}

Table point_logs {
  id         int      [pk, increment, note: '포인트 변동 ID']
  user_id    int      [not null, ref: > users.id, note: 'FK → users']
  amount     int      [not null, note: '양수: 적립 / 음수: 차감']
  reason     varchar  [not null, note: 'challenge_complete / streak_bonus / badge_earned / diet_report / shop_purchase']
  created_at datetime [not null, default: `now()`, note: '변동 시각']
}

Table friendships {
  id           int      [pk, increment, note: '친구 요청 ID']
  requester_id int      [not null, ref: > users.id, note: '요청 보낸 사용자']
  receiver_id  int      [not null, ref: > users.id, note: '요청 받은 사용자']
  status       varchar  [not null, note: 'PENDING / ACCEPTED / REJECTED / BLOCKED']
  created_at   datetime [not null, default: `now()`, note: '요청 시각']

  indexes {
    (requester_id, receiver_id) [unique]
  }
}

Table friend_list {
  id         int      [pk, increment, note: '친구 목록 ID']
  user_id    int      [not null, ref: > users.id, note: '사용자 ID']
  friend_id  int      [not null, ref: > users.id, note: '친구 ID']
  created_at datetime [not null, default: `now()`, note: '친구 확정 시각']

  indexes {
    (user_id, friend_id) [unique]
  }
}
